# vulnerable-tutorials

./: .gitignore  .pre-commit-config.yaml  README.md
vulntuts-tool/: README.md  setup.cfg
vulntuts-tool/config/: config.example.yaml  queries.example.yaml
vulntuts-tool/templates/messages/: debriefing-mailmerge.md  debriefing-pandoc.md  notification-mailmerge.md  notification-pandoc.md  reminder-pandoc.md
vulntuts-tool/templates/reports/: pandoc-template.html  report.md
vulntuts-tool/templates/reports/static/: prism.css
vulntuts-tool/templates/weaknesses/: weaknesses.yaml
vulntuts-tool/templates/weaknesses/generic/: BROKEN_ACCESS_CONTROL-exploit.md  BROKEN_AUTHENTICATION-exploit.md  BROKEN_AUTHENTICATION-fix.md  BROKEN_CRYPTO-exploit.md  BROKEN_FORGOT_PASSWORD-exploit.md  BROKEN_FORGOT_PASSWORD-fix.md  CLEARTEXT_PW-exploit.md  CLIENT_SIDE_VALIDATION-exploit.md  CLIENT_SIDE_VALIDATION-fix.md  FIXED_SALT-exploit.md  FIXED_SECRET-exploit.md  HARDCODED_PW-exploit.md  INSECURE_PW_HASHING-exploit.md  SENSITIVE_FILE_UNDER_WEB_ROOT-exploit.md  SENSITIVE_FILE_UNDER_WEB_ROOT-fix.md
vulntuts-tool/templates/weaknesses/java/: BROKEN_CRYPTO-fix.md  CLEARTEXT_PW-fix.md  HARDCODED_PW-fix.md  INSECURE_PW_HASHING-fix.md  PATH_TRAVERSAL-exploit.md  PATH_TRAVERSAL-fix.md  REFLECTED_XSS-fix.md  (+7 more)
vulntuts-tool/vulntuts/: __main__.py  browser.py  cli.py  errors.py  models.py  run-chromium.sh  storage.py  terminal_ui.py  youtube.py
vulntuts-tool/vulntuts/commands/: __init__.py  browser.py  data.py  experiment.py  inspect.py  queries.py  sample.py  scan.py  search.py  suggestions.py
(+86 files in other folders)
