[metadata]
name = vulntuts
version = 0.1
author = Tobias Heckel
author_email = dev@tobias-heckel.de
description = Tool for collecting, inspecting and scanning tutorials for vulnerabilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/strobi/ma-vulnerable-tutorials

[options]
packages = find:
python_requires = >=3.7
install_requires =
    beautifulsoup4
    dacite
    dateparser
    google-api-python-client
    jinja2
    numpy
    pillow
    pychrome
    pypandoc
    pyyaml
    searchtweets-v2
    tldextract
    tqdm
    yt-dlp

[options.entry_points]
console_scripts =
    vulntuts = vulntuts.cli:main

[flake8]
max-line-length = 88
max-complexity = 12
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[isort]
profile = black
src_paths = vulntuts
